cabal-version:      2.4
name:               span
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Static site generator

-- A longer description of the package.
description: Static site generator based on Pandoc. Please see the README.md for a better description.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-2.0-or-later
author:             Ved Thiru
maintainer:         47309279+PerpetualCreativity@users.noreply.github.com

-- A copyright notice.
copyright:          (c) 2023 Ved Thiru
-- category:
extra-source-files: CHANGELOG.md

common all
    build-depends:
        base                 ^>=4.18.0.0,
        filepath             >=1.4.22,
        directory            >=1.3.8.1,
        text                 >=1.2.5.0,
        pandoc               >=3.1.6,
        pandoc-lua-engine    >=0.2,
        doctemplates         >=0.11,
        containers           >=0.6.5.1,
        yaml                 >=0.11.11.0,
        aeson                >=2.1.2.1,
        optparse-applicative >=0.17.0.0,
        Glob                 >=0.10.2,
        vector               >=0.13.0.0,
    default-language: Haskell2010

library
    import:           all
    exposed-modules:  Options, Render

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src

executable span
    import:           all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    span
    hs-source-dirs:   app
